[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/main/puzzle/critter/CarrotVisuals1x4.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/puzzle/critter/CarrotVisuals2x3.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/puzzle/critter/carrot.gd" type="Script" id=3]
[ext_resource path="res://src/main/puzzle/critter/CarrotVisuals2x1.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/main/world/cartoony-smoke-sheet.png" type="Texture2D" id=5]
[ext_resource path="res://src/main/puzzle/critter/CarrotVisuals3x5.tscn" type="PackedScene" id=6]

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="Gradient" id=6]
offsets = PackedFloat32Array( 0, 0.071066, 0.837563, 1 )
colors = PackedColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=7]
gradient = SubResource( 6 )

[sub_resource type="ParticleProcessMaterial" id=5]
resource_local_to_scene = true
emission_shape = 2
emission_box_extents = Vector3( 10, 4, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 90.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_min = 60.0
initial_velocity_max = 60.0
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 8.0
angle = 360.0
angle_random = 1.0
color_ramp = SubResource( 7 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Animation" id=1]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "face-1"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0, 0, 1, 0, 0, 1, 1, 0, 1, 1 ]
}

[sub_resource type="Animation" id=9]
resource_name = "face-2"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3, 3, 2, 2, 3, 2, 2, 3, 2, 3, 3, 2, 3, 2, 2, 3, 2, 3, 2, 2, 3, 2, 2, 3, 3, 2, 3, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "face-3"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 4, 5, 5, 4, 4, 5, 4, 4, 5, 4, 5, 5, 4, 5, 4, 4, 5, 4, 5, 4, 4, 5, 4, 4, 5, 5, 4, 5, 5 ]
}

[sub_resource type="Animation" id=11]
resource_name = "face-4"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 7, 7, 6, 6, 7, 6, 6, 7, 6, 7, 7, 6, 7, 6, 6, 7, 6, 7, 6, 6, 7, 6, 6, 7, 7, 6, 7, 7 ]
}

[sub_resource type="Animation" id=12]
resource_name = "face-5"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 8, 9, 9, 8, 8, 9, 8, 8, 9, 8, 9, 9, 8, 9, 8, 8, 9, 8, 9, 8, 8, 9, 8, 8, 9, 9, 8, 9, 9 ]
}

[sub_resource type="Animation" id=13]
resource_name = "face-6"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 10, 11, 11, 10, 10, 11, 10, 10, 11, 10, 11, 11, 10, 11, 10, 10, 11, 10, 11, 10, 10, 11, 10, 10, 11, 11, 10, 11, 11 ]
}

[sub_resource type="Animation" id=14]
resource_name = "face-7"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 12, 13, 13, 12, 12, 13, 12, 12, 13, 12, 13, 13, 12, 13, 12, 12, 13, 12, 13, 12, 12, 13, 12, 12, 13, 13, 12, 13, 13 ]
}

[sub_resource type="Animation" id=15]
resource_name = "face-8"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 14, 15, 15, 14, 14, 15, 14, 14, 15, 14, 15, 15, 14, 15, 14, 14, 15, 14, 15, 14, 14, 15, 14, 14, 15, 15, 14, 15, 15 ]
}

[sub_resource type="Animation" id=16]
resource_name = "face-9"
length = 10.3333
loop_mode = 1
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("Visuals/Face:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.333333, 0.666667, 1, 1.33333, 1.66667, 2, 2.33333, 2.66667, 3, 3.33333, 3.66667, 4, 4.33333, 4.66667, 5, 5.33333, 5.66667, 6, 6.33333, 6.66667, 7, 7.33333, 7.66667, 8, 8.33333, 8.66667, 9, 9.33333, 9.66667, 10 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 16, 17, 17, 16, 16, 17, 16, 16, 17, 16, 17, 17, 16, 17, 16, 16, 17, 16, 17, 16, 16, 17, 16, 16, 17, 17, 16, 17, 17 ]
}

[node name="Carrot" type="Node2D"]
script = ExtResource( 3 )
carrot_visuals_by_size = [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ) ]

[node name="Visuals" parent="." instance=ExtResource( 1 )]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource( 4 )
position = Vector2( 0, 240.965 )
amount = 12
lifetime = 1.5
preprocess = 8.0
visibility_rect = Rect2( -500, -100, 1000, 1200 )
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 5 )

[node name="FaceAnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/RESET = SubResource( 1 )
anims/default = SubResource( 2 )
anims/face-1 = SubResource( 8 )
anims/face-2 = SubResource( 9 )
anims/face-3 = SubResource( 10 )
anims/face-4 = SubResource( 11 )
anims/face-5 = SubResource( 12 )
anims/face-6 = SubResource( 13 )
anims/face-7 = SubResource( 14 )
anims/face-8 = SubResource( 15 )
anims/face-9 = SubResource( 16 )

[node name="FreeTimer" type="Timer" parent="."]

[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]
